fix: Improved sidebar mobile visibility by adding z-index

--- a/apps/quote-manager/src/app/shared/sidebar/sidebar.component.scss
+++ b/apps/quote-manager/src/app/shared/sidebar/sidebar.component.scss
@@ -6,6 +6,7 @@
   height: calc(100vh - #{$navbar-height});
   display: flex;
   flex-direction: column;
+	z-index: 1;
   .button {
     display: flex;
     justify-content: center;
